# GRAVITATIONAL-SIM

./: .clang-format  CMakeLists.txt  imgui.ini
shader/: shader.fs  shader.vs  trail.fs  trail.vs
src/: main.cpp  particules.hpp
